@@ -12,3 +12,4 @@ o Add a configuration option to specify which mail header to check for
 
 v0.3, Not yet released
 o Trap new nym requests that have no email addresses on the key.
+o Check for malformed Content-Type returned during geturl()
